force-app/main/default/objects/VentasSemanales__c/VentasSemanales__c.object-meta.xml
<CustomObject>
    <label>Ventas semanales</label>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Nombre de Ventas semanales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas semanales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>