force-app/main/default/objects/VentasSemanales__c/fields/ContratoNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>ContratoNetoSemana__c</fullName>
    <label>Contrato Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>