force-app/main/default/objects/VentasSemanales__c/fields/CuentasAcumulado__c.field-meta.xml
<CustomField>
    <fullName>CuentasAcumulado__c</fullName>
    <label>Cuentas acumulado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>