force-app/main/default/objects/VentasSemanales__c/fields/CuentasSemana__c.field-meta.xml
<CustomField>
    <fullName>CuentasSemana__c</fullName>
    <label>Cuentas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>