force-app/main/default/objects/VentasSemanales__c/fields/DisponibleTotal__c.field-meta.xml
<CustomField>
    <fullName>DisponibleTotal__c</fullName>
    <label>Disponible Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>