force-app/main/default/objects/VentasSemanales__c/fields/Escrituraciones__c.field-meta.xml
<CustomField>
    <fullName>Escrituraciones__c</fullName>
    <label>Escrituraciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>