force-app/main/default/objects/VentasSemanales__c/fields/LeadsAcumulado__c.field-meta.xml
<CustomField>
    <fullName>LeadsAcumulado__c</fullName>
    <label>Leads acumulado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>