force-app/main/default/objects/VentasSemanales__c/fields/LeadsSemana__c.field-meta.xml
<CustomField>
    <fullName>LeadsSemana__c</fullName>
    <label>Leads semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>