force-app/main/default/objects/VentasSemanales__c/fields/Permutas__c.field-meta.xml
<CustomField>
    <fullName>Permutas__c</fullName>
    <label>Permutas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>