force-app/main/default/objects/VentasSemanales__c/fields/PorcentajeVentaSobreTotal__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeVentaSobreTotal__c</fullName>
    <label>% venta sobre Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>