force-app/main/default/objects/VentasSemanales__c/fields/PreReservaAltasSemana__c.field-meta.xml
<CustomField>
    <fullName>PreReservaAltasSemana__c</fullName>
    <label>PreReserva Altas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>