force-app/main/default/objects/VentasSemanales__c/fields/PreReservaNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>PreReservaNetoSemana__c</fullName>
    <label>PreReserva Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>