force-app/main/default/objects/VentasSemanales__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <label>Promoción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>