force-app/main/default/objects/VentasSemanales__c/fields/ReservaAltasSemana__c.field-meta.xml
<CustomField>
    <fullName>ReservaAltasSemana__c</fullName>
    <label>Reserva Altas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>