force-app/main/default/objects/VentasSemanales__c/fields/ReservaNetoSemana__c.field-meta.xml
<CustomField>
    <fullName>ReservaNetoSemana__c</fullName>
    <label>Reserva Neto semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>