force-app/main/default/objects/VentasSemanales__c/fields/TotalComercializado__c.field-meta.xml
<CustomField>
    <fullName>TotalComercializado__c</fullName>
    <description>Excluye Libre, Canje, Apartado y Cancelado</description>
    <label>Total Comercializado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>