force-app/main/default/objects/VentasSemanales__c/fields/VisitasCuentasAcumulado__c.field-meta.xml
<CustomField>
    <fullName>VisitasCuentasAcumulado__c</fullName>
    <label>Visitas Cuentas acumulado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>