force-app/main/default/objects/VentasSemanales__c/fields/VisitasCuentasSemana__c.field-meta.xml
<CustomField>
    <fullName>VisitasCuentasSemana__c</fullName>
    <label>Visitas Cuentas semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>