force-app/main/default/objects/VentasSemanales__c/fields/VisitasLeadsAcumulado__c.field-meta.xml
<CustomField>
    <fullName>VisitasLeadsAcumulado__c</fullName>
    <label>Visitas Leads acumulado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>