force-app/main/default/objects/VentasSemanales__c/fields/VisitasLeadsSemana__c.field-meta.xml
<CustomField>
    <fullName>VisitasLeadsSemana__c</fullName>
    <label>Visitas Leads semana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>